cmake_minimum_required(VERSION 3.20)
set(CMAKE_CXX_STANDARD 23)
project(project-euler-cpp)

add_executable(problem-1 problem-1.cpp)
add_executable(problem-2 problem-2.cpp)
add_executable(problem-3 problem-3.cpp)
add_executable(problem-5 problem-5.cpp)
add_executable(problem-8 problem-8.cpp)
add_executable(problem-13 problem-13.cpp)
add_executable(problem-21 problem-21.cpp)
